Fix action button icon alignment in BrowserHeader
Remove fa-2x class from MicrobeTrace icon to avoid conflicting
margin/height !important rules. Add two-line labels to REPORT
buttons for cgMLST and wgSNP so all buttons align consistently.

--- a/public/maage/css/src/styles.css
+++ b/public/maage/css/src/styles.css
@@ -982,9 +982,9 @@ div.ActionButton.icon-microbetrace {
 .BrowserHeader div.ActionButton.icon-microbetrace {
   background-image: url('/maage/img/microbetrace-icon-dark.svg');
   background-size: 28px 28px;
-  width: 36px !important;
-  height: 36px !important;
-  margin-top: 4px;
+  width: 28px !important;
+  height: 28px !important;
+  margin: 3px auto 0 auto;
 }
 
 div#maage-page {
